--- a/ShipmentAPI.yaml
+++ b/ShipmentAPI.yaml
@@ -34,6 +34,7 @@ paths:
           required: false
           schema:
             $ref: '#/definitions/RegisterShipmentRequest'
+      description: The details of the shipment to be registered      
       responses:
         '200':
           description: Success
